# mansei-project

./: .dockerignore  .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c4f421391c8_init.py  4f132a34c53c_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  mansei.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: mansei.py  user.py
backend/app/schemas/: mansei.py  user.py
backend/app/services/: mansei.py  redis.py
backend/app/utils/: mansei_calculator.py
frontend/: Dockerfile  Dockerfile.dev  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: main.css
frontend/composables/: useApi.ts  useAuth.ts  useMansei.ts  useToast.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.ts
frontend/pages/: calculate.vue  dashboard.vue  history.vue  index.vue  login.vue  register.vue
frontend/pages/result/: [id].vue
frontend/plugins/: api.client.ts
frontend/stores/: auth.ts  mansei.ts
